# clairvoyance

./: .env.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  mypy.ini  pyproject.toml
.github/workflows/: bump.yml  qa.yml  release.yml
docs/: architecture.md
src/clairvoyance/: __init__.py  config.py  main.py
src/clairvoyance/bot/: client.py  commands.py
tests/: __init__.py  factories.py  test_bot_client.py  test_bot_commands.py  test_clairvoyance.py  test_command_parsing.py  test_command_registry.py  test_config.py  test_voice_commands.py
