[project]
name = "clairvoyance"
version = "0.1.0"
description = "Discord bot that records, transcribes, and summarizes D&D sessions"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Niklas Baier" }
]
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
clairvoyance = "clairvoyance.main:main"

[project.optional-dependencies]
dev = [
    "commitizen>=3.30.0",
    "polyfactory>=2.20.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]
bot = [
    "discord.py>=2.4.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clairvoyance"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
version_files = [
    "pyproject.toml:^version",
]
update_changelog_on_bump = true
bump_message = "bump: $current_version → $new_version"
changelog_file = "CHANGELOG.md"
